k8s/batch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karrot-batch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karrot-batch
  template:
    metadata:
      labels:
        app: karrot-batch
    spec:
      containers:
        - name: karrot-batch
          image: karrot-zeronine-batch:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
