k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karrot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: karrot.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karrot-api
                port:
                  number: 8080
